Logout implementado, arreglado el form y se ha hecho boton de intentos restantes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -409,3 +409,9 @@ body{
   transition: color 0.3s;
 }
 
+.cl-formFieldInfoText__password {
+  display: none;
+}
+.cl-formFieldErrorText{
+  display: none;
+}
