--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -415,3 +415,10 @@ body{
 .cl-formFieldErrorText{
   display: none;
 }
+
+/*boton del menu*/
+.close-button{
+  position: relative;
+  left: 210px;
+  top: -520px;
+}
