--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,37 +6,15 @@ body{
   @apply bg-gray-800;
 }
 
-/*formulario login y registro*/
-.cl-rootBox {
-  margin: auto;
-  margin-top: 55px;
-}
-
-.cl-card {
-  background-color: #2d3748;
-  -webkit-text-fill-color: white;
-}
-
-.cl-socialButtonsIconButton{
-  background-color: white;
-}
-.cl-formFieldInput{
-  -webkit-text-fill-color: #2d3748;
-}
-
-
-
-
-
 /*estilos boton*/
 .btn {
   position: relative;
   left: 10px;
   display: block;
   width: 100%; /* Ancho completo para que sea responsive */
-  max-width: 250px; /* Ancho máximo */
-  margin: 50px auto; /* Margen arriba y abajo (50px) y centrado horizontalmente (auto) */
-  height: 60px;
+  max-width: 350px; /* Ancho máximo */
+  height: 80px;
+  margin: 15px auto; /* Margen arriba y abajo (50px) y centrado horizontalmente (auto) */
   text-align: center;
   line-height: 60px;
   color: #fff;
@@ -45,40 +23,24 @@ body{
   text-decoration: none;
   font-family: sans-serif;
   box-sizing: border-box;
-  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
-  background-size: 400%;
+  background-image: url('/assets/boton-lanzar.png');
+  background-size: cover;
   border-radius: 30px;
   z-index: 1;
-  animation: animate 8s linear infinite;
-}
-
-.btn:hover {
-  animation: animate 8s linear infinite;
-}
-
-.float{
-  transition: .5s, color .10s;
-  -webkit-transition: .5s, color .10s;
-  -moz-transition: .5s, color .10s;
-}
-.float:hover{
-  box-shadow: 0 8px 8px 0 #000000,0 8px 8px 0 #000000;
-  transform: translate(0px,5px);
-  -webkit-transform: translate(0px,5px);
-  -moz-transform:translate(0px,5px);
 }
 
 
-@keyframes animate {
+
+/* @keyframes animate {
   0% {
     background-position: 0%;
   }
   100% {
     background-position: 400%;
   }
-}
+} */
 
-.btn::before {
+/* .btn::before {
   content: "";
   position: absolute;
   top: -5px;
@@ -91,15 +53,15 @@ body{
   border-radius: 40px;
   opacity: 0;
   transition: .5s;
-}
+} */
 
-.btn:hover::before {
+/* .btn:hover::before {
   filter: blur(20px);
   opacity: 1;
-  animation: none; /* Elimina la animación al hacer hover */
-}
+  animation: none; 
+} */
 
-.header-button::before {
+/* .header-button::before {
   content: '';
   position: absolute;
   bottom: -2px;
@@ -108,8 +70,8 @@ body{
   height: 2px;
   background-color: #fff;
   transition: width 0.3s;
-}
-.header-button:hover::before {
+} */
+/* .header-button:hover::before {
   width: 100%;
 }
 
@@ -125,22 +87,22 @@ body{
 }
 .new-header-button:hover::before {
   width: 100%;
-}
+} */
 
               
 
      
 
 /* Estilos para los bordes de las cartas */
-.border-comun {
+/* .border-comun {
   border: 6px solid rgb(82, 4, 4); 
   position: relative;
   overflow: hidden; 
   width: 90%;
   border-image: linear-gradient(to right, transparent, rgb(25, 25, 25), transparent) 1 1;
   animation: desplazamiento-borde-comun 2.5s linear infinite; 
-}
-
+} */
+/* 
 .border-plata {
   border: 6px solid #C0C0C0; 
   position: relative;
@@ -165,7 +127,7 @@ body{
   overflow: hidden; 
   width: 90%;
   border-image: linear-gradient(to right, transparent, #1ecf4d, transparent) 1 1;
-  animation: desplazamiento-borde-raro 2.5s linear infinite; /* Animación para el borde */
+  animation: desplazamiento-borde-raro 2.5s linear infinite;
 }
 
 .border-epico {
@@ -174,18 +136,18 @@ body{
   overflow: hidden; 
   width: 90%;
   border-image: linear-gradient(to right, transparent, rgb(255, 0, 242), transparent) 1 1;
-  animation: desplazamiento-borde-epico 2.5s linear infinite; /* Animación para el borde */
-}
+  animation: desplazamiento-borde-epico 2.5s linear infinite; 
+} */
 
-.border-mitico {
+/* .border-mitico {
   border: 6px solid rgb(255, 0, 242);
   position: relative;
   overflow: hidden; 
   width: 90%;
   border-image: linear-gradient(to right, transparent, rgb(255, 0, 242), transparent) 1 1;
-  animation: desplazamiento-borde-mitico 2.5s linear infinite; /* Animación para el borde */
-}
-
+  animation: desplazamiento-borde-mitico 2.5s linear infinite; 
+} */
+/* Animación para el borde */
 
 
 
@@ -437,4 +399,11 @@ body{
 .custom-scrollbar::-webkit-scrollbar-track {
   background-color: #2d3748; /* Color del track */
   border-radius: 6px;
+}
+.gap{
+  gap: 20px;
+  justify-content: center;
+}
+.seccionGuardadas{
+  background-color: rgba(80, 69, 104, 0.5);
 }
