--- a/public/css/profiles.css
+++ b/public/css/profiles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('/assets/background-sections.png') !important;
+
     background-color: #462241;
     background-size: cover;
     background-position:center;
@@ -11,4 +11,20 @@ body{
 .userName{
     border-bottom: 10px solid #6B5F69;
     width: 90%;
+}
+.userName {
+    position: relative; /* Necesario para posicionar el pseudo-elemento */
+    display: inline-block; /* Para que el contenedor se ajuste al texto */
+}
+
+.userName::after {
+    content: ''; /* Se requiere para los pseudo-elementos */
+    position: absolute; /* Para posicionar la sombra */
+    bottom: -5px; /* Ajusta la posición vertical de la sombra */
+    right: -5px; /* Ajusta la posición horizontal de la sombra */
+    width: 10px; /* Ancho de la sombra */
+    height: 10px; /* Alto de la sombra */
+    background: rgba(0, 0, 0, 0.5); /* Color de la sombra */
+    z-index: -1; /* Asegura que la sombra esté detrás del texto */
+    box-shadow: 3px 7px 11px 6px rgba(0, 0, 0, 0.5);
 }
