--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,5 +1,5 @@
-.footerCont{
-    background-color: rgba(80, 69, 104, 0.5);
-    font-size: 10px;
-    width: 100%;
+.footerCont {
+  background-color: "black";
+  font-size: 10px;
+  width: 100%;
 }
