--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,12 +32,12 @@ body {
 }
 .boton-guardar {
   margin-top: 5px;
-  position: relative;
+  position: absolute;
   z-index: 2;
-  width: 80px;
-  height: 25px;
+  margin-right: 20px;
+  width: 32px;
+  height: 32px;
   background: rgba(255, 255, 255, 0.6);
-  border-radius: 10px;
 }
 .boton-guardar img {
   width: 17px;
