--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,12 +75,12 @@
   }
 }
 
-.cl-formButtonPrimary {
+/* .cl-formButtonPrimary {
   font-size: 14px;
   text-transform: none;
   background-color: #ffffff !important;
   color: black !important;
-}
+} */
 
 .cl-socialButtonsIconButton {
   background-color: #ffffff !important;
