--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,7 @@
     --border: 214.3 31.8% 91.4%;
     --border-button: 0 0% 24.3%;
     --border-button-hover: 0 0% 31.4%;
+    --border-overlay: 0deg 0% 15.7%;
 
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
