--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,141 @@
 @tailwind components;
 @tailwind utilities;
 
+--colors-black: 0deg 0% 0%;
+--colors-white: 0deg 0% 100%;
+--colors-gray-dark-100: 0deg 0% 8.6%;
+--colors-gray-dark-200: 0deg 0% 11%;
+--colors-gray-dark-300: 0deg 0% 13.7%;
+--colors-gray-dark-400: 0deg 0% 15.7%;
+--colors-gray-dark-500: 0deg 0% 18%;
+--colors-gray-dark-600: 0deg 0% 20.4%;
+--colors-gray-dark-700: 0deg 0% 24.3%;
+--colors-gray-dark-800: 0deg 0% 31.4%;
+--colors-gray-dark-900: 0deg 0% 43.9%;
+--colors-gray-dark-1000: 0deg 0% 49.4%;
+--colors-gray-dark-1100: 0deg 0% 62.7%;
+--colors-gray-dark-1200: 0deg 0% 92.9%;
+--colors-gray-dark-alpha-100: transparent;
+--colors-gray-dark-alpha-200: hsla(0, 0%, 100%, 0.031);
+--colors-gray-dark-alpha-300: hsla(0, 0%, 100%, 0.059);
+--colors-gray-dark-alpha-400: hsla(0, 0%, 100%, 0.078);
+--colors-gray-dark-alpha-500: hsla(0, 0%, 100%, 0.102);
+--colors-gray-dark-alpha-600: hsla(0, 0%, 100%, 0.129);
+--colors-gray-dark-alpha-700: hsla(0, 0%, 100%, 0.169);
+--colors-gray-dark-alpha-800: hsla(0, 0%, 100%, 0.251);
+--colors-gray-dark-alpha-900: hsla(0, 0%, 100%, 0.388);
+--colors-gray-dark-alpha-1000: hsla(0, 0%, 100%, 0.451);
+--colors-gray-dark-alpha-1100: hsla(0, 0%, 100%, 0.588);
+--colors-gray-dark-alpha-1200: hsla(0, 0%, 100%, 0.922);
+--colors-gray-light-100: 0deg 0% 98.8%;
+--colors-gray-light-200: 0deg 0% 97.3%;
+--colors-gray-light-300: 0deg 0% 95.3%;
+--colors-gray-light-400: 0deg 0% 92.9%;
+--colors-gray-light-500: 0deg 0% 91%;
+--colors-gray-light-600: 0deg 0% 88.6%;
+--colors-gray-light-700: 0deg 0% 85.9%;
+--colors-gray-light-800: 0deg 0% 78%;
+--colors-gray-light-900: 0deg 0% 56.1%;
+--colors-gray-light-1000: 0deg 0% 52.2%;
+--colors-gray-light-1100: 0deg 0% 43.5%;
+--colors-gray-light-1200: 0deg 0% 9%;
+--colors-gray-light-alpha-100: rgba(0, 0, 0, 0.012);
+--colors-gray-light-alpha-200: rgba(0, 0, 0, 0.031);
+--colors-gray-light-alpha-300: rgba(0, 0, 0, 0.051);
+--colors-gray-light-alpha-400: rgba(0, 0, 0, 0.071);
+--colors-gray-light-alpha-500: rgba(0, 0, 0, 0.09);
+--colors-gray-light-alpha-600: rgba(0, 0, 0, 0.11);
+--colors-gray-light-alpha-700: rgba(0, 0, 0, 0.141);
+--colors-gray-light-alpha-800: rgba(0, 0, 0, 0.22);
+--colors-gray-light-alpha-900: rgba(0, 0, 0, 0.439);
+--colors-gray-light-alpha-1000: rgba(0, 0, 0, 0.478);
+--colors-gray-light-alpha-1100: rgba(0, 0, 0, 0.561);
+--colors-gray-light-alpha-1200: rgba(0, 0, 0, 0.91);
+--colors-slate-dark-100: 200deg 6.7% 8.8%;
+--colors-slate-dark-200: 195deg 7.1% 11%;
+--colors-slate-dark-300: 192deg 7.2% 13.5%;
+--colors-slate-dark-400: 204deg 6.2% 15.9%;
+--colors-slate-dark-500: 200deg 6.5% 18%;
+--colors-slate-dark-600: 205.7deg 6.7% 20.6%;
+--colors-slate-dark-700: 202.5deg 6.5% 24.3%;
+--colors-slate-dark-800: 206.7deg 5.6% 31.6%;
+--colors-slate-dark-900: 205.7deg 6.3% 43.9%;
+--colors-slate-dark-1000: 207.7deg 5.1% 49.6%;
+--colors-slate-dark-1100: 207.3deg 5.8% 62.9%;
+--colors-slate-dark-1200: 210deg 5.6% 92.9%;
+--colors-slate-dark-alpha-100: transparent;
+--colors-slate-dark-alpha-200: rgba(213, 254, 255, 0.031);
+--colors-slate-dark-alpha-300: rgba(214, 251, 252, 0.059);
+--colors-slate-dark-alpha-400: rgba(226, 240, 253, 0.078);
+--colors-slate-dark-alpha-500: rgba(223, 243, 253, 0.11);
+--colors-slate-dark-alpha-600: rgba(223, 239, 254, 0.141);
+--colors-slate-dark-alpha-700: rgba(224, 243, 255, 0.18);
+--colors-slate-dark-alpha-800: rgba(229, 242, 254, 0.259);
+--colors-slate-dark-alpha-900: rgba(225, 241, 255, 0.412);
+--colors-slate-dark-alpha-1000: rgba(231, 243, 255, 0.471);
+--colors-slate-dark-alpha-1100: rgba(239, 247, 255, 0.62);
+--colors-slate-dark-alpha-1200: rgba(253, 254, 255, 0.929);
+--colors-slate-light-100: 210deg 33.3% 98.8%;
+--colors-slate-light-200: 210deg 16.7% 97.6%;
+--colors-slate-light-300: 210deg 16.7% 95.3%;
+--colors-slate-light-400: 210deg 11.8% 93.3%;
+--colors-slate-light-500: 216deg 11.1% 91.2%;
+--colors-slate-light-600: 205.7deg 12.3% 88.8%;
+--colors-slate-light-700: 210deg 11.1% 85.9%;
+--colors-slate-light-800: 205deg 10.7% 78%;
+--colors-slate-light-900: 205.7deg 6.3% 56.1%;
+--colors-slate-light-1000: 205.7deg 5.7% 52.2%;
+--colors-slate-light-1100: 205.7deg 6.3% 43.5%;
+--colors-slate-light-1200: 201.8deg 24.4% 8.8%;
+--colors-slate-light-alpha-100: rgba(5, 68, 130, 0.02);
+--colors-slate-light-alpha-200: rgba(5, 41, 77, 0.031);
+--colors-slate-light-alpha-300: rgba(0, 37, 73, 0.051);
+--colors-slate-light-alpha-400: rgba(2, 28, 55, 0.078);
+--colors-slate-light-alpha-500: rgba(2, 23, 53, 0.102);
+--colors-slate-light-alpha-600: rgba(1, 33, 57, 0.129);
+--colors-slate-light-alpha-700: rgba(0, 26, 51, 0.161);
+--colors-slate-light-alpha-800: rgba(1, 30, 50, 0.239);
+--colors-slate-light-alpha-900: rgba(0, 17, 30, 0.471);
+--colors-slate-light-alpha-1000: rgba(0, 16, 27, 0.51);
+--colors-slate-light-alpha-1100: rgba(0, 14, 24, 0.588);
+--colors-slate-light-alpha-1200: rgba(0, 8, 12, 0.929);
+--variables-colors-brand-primary: 153.1deg 60.2% 52.7%;
+--variables-colors-brand-accent: 152.9deg 56.1% 46.5%;
+--spacing-scale: 2px;
+--spacing-xs: 4px;
+--spacing-sm: 8px;
+--spacing-md: 16px;
+--spacing-lg: 32px;
+--spacing-xl: 64px;
+--sizing-scale: 1.5px;
+--sizing-xs: 4px;
+--sizing-sm: 6px;
+--sizing-md: 9px;
+--sizing-lg: 13.5px;
+--sizing-xl: 20.25px;
+--borderradius-sm: 4px;
+--borderradius-lg: 8px;
+--borderradius-xl: 16px;
+--borderradius-xs: 2px;
+--borderradius-tableheader: 4px;
+--borderwidth-none: 0;
+--borderwidth-xs: 1px;
+--borderwidth-sm: 2px;
+--borderwidth-md: 4px;
+--borderwidth-lg: 8px;
+--icon-xs: 12px;
+--icon-sm: 16px;
+--icon-md: 18px;
+--iconwidth-default: 1px;
+--panel: 2px;
+--datatable-headericon: 16px;
+--datatable-rowheight: 28px;
+--options-icon: 18px;
+--input-sm-height: 28px;
+--panel2: 4px;
+--xxl: 128px;
+--content-width-screen-xl: 1128px;
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,6 +144,13 @@
     --background3: 0, 0%, 18%;
 
     --background-surface-200: 0 0% 20.4%;
+
+    --surface-75: --colors-slate-light-alpha-1200;
+    --surface-100: 0 0% 13.7%;
+    --surface-200: 0 0% 15.7%;
+    --surface-300: 0 0% 18%;
+    --surface-400: 0 0% 24.3%;
+    --surface-500: 0 0% 20.4%;
 
     --foreground: 222.2 84% 4.9%;
 
