--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -1,12 +1,9 @@
-.car{
-    margin-top: 7%;
-    margin-bottom: 50px;
-    gap: 20px;
-    justify-content: center
+.car {
+  margin-top: 7%;
+  margin-bottom: 50px;
+  gap: 20px;
+  justify-content: center;
 }
-.lanzarCards{
-    left: 0;
-}
-.intentos{
-    margin-bottom: 40px;
+.lanzarCards {
+  left: 0;
 }
